[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Enemy sprites/barnacle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Enemy sprites/barnacle_bite.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/SignalTriggeredText.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.5253, 29.3999 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "New Anim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SignalTriggeredText" parent="." instance=ExtResource( 4 )]
margin_left = -36.7783
margin_top = -61.4114
margin_right = 48.2217
margin_bottom = -43.4114

[connection signal="on_hit" from="." to="SignalTriggeredText" method="change_text"]
